--- a/web-app/app/scheme/templates/scheme/relationships_terms.html
+++ b/web-app/app/scheme/templates/scheme/relationships_terms.html
@@ -7,11 +7,19 @@
 
 {% block therm %}
     <table border="1" width="100%">
-        <tr><th>id элемента</th><th>термин</th><th>определение</th></tr>
+        <tr><th>id элемента</th><th>термин</th><th>кнопки</th><th>определение</th></tr>
     {% for answer in answers %}
         <tr>
-            <td><a href="{% url 'news-update' answer.id %}">{{ answer.id }}</a></td>
-            <td><a href="{% url 'news-list' answer.title %}">{{ answer.title }}</a></td>
+            <td>{{ answer.id }}</td>
+            <td>{{ answer.title }}</td>
+            <td>
+                <a href="{% url 'news-update' answer.id %}">
+                    <button>обновить</button>
+                </a>
+                <a href="{% url 'news-list' answer.title %}">
+                    <button>просмтреть</button>
+                </a>
+            </td>
             <td>{{ answer.body }}</td>
         </tr>
     {% endfor %}
