--- a/web-app/app/main/templates/main/index.html
+++ b/web-app/app/main/templates/main/index.html
@@ -3,5 +3,7 @@
 {% block title %}kek{% endblock %}
 
 {% block content %}
-lol
+    <a href="http://127.0.0.1:8000/scheme/addXML">
+        <button>дальше</button>
+    </a>
 {% endblock %}
